# advent-of-code-2015

./: .golangci.toml  .lefthook.toml  .lychee.toml  Cargo.toml  LICENSE  README.md  go.mod
2015/: .gitignore  Cargo.toml
2015/day01/: main.go
2015/day02/: main.go
2015/day03/: main.go
2015/day04/: main.go
2015/day05/: main.go
2015/day06/: main.go
2015/day08/: input.txt  main.go
2015/day09/: main.go
2015/day10/: main.go
2015/day12/: main.go
2015/src/day01/: main.rs
2015/src/day02/: main.rs
2015/src/day06/: main.rs
2024/day01/: main.go
2024/day02/: main.go
2024/day03/: main.go
2024/day04/: main.go
2024/day05/: main.go
helpers/: helpers.go  template.go
src/day03/: main.rs
src/day04/: main.rs
src/day05/: main.rs
